@@ -1,8 +1,7 @@
-// -*- mode: C++; c-indent-level: 4; c-basic-offset: 4; indent-tabs-mode: nil; -*-
-//
+
 // RcppGSL_vector_view.h: Vector view class for Seamless R and GSL Integration
 //
-// Copyright (C)  2010 - 2015  Romain Francois and Dirk Eddelbuettel
+// Copyright (C)  2010 - 2020  Romain Francois and Dirk Eddelbuettel
 //
 // This file is part of RcppGSL.
 //
@@ -27,12 +26,12 @@
 
 namespace Rcpp{
 
-    #define RCPPGSL_VIEW(SUFFIX)                                      \
-    template <> SEXP wrap(const gsl_vector##SUFFIX##_view& x) {       \
-        return wrap(x.vector);                                        \
-    }                                                                 \
-    template <> SEXP wrap(const gsl_vector##SUFFIX##_const_view& x) { \
-        return wrap(x.vector);                                        \
+    #define RCPPGSL_VIEW(SUFFIX)                                             \
+    template <> inline SEXP wrap(const gsl_vector##SUFFIX##_view& x) {       \
+        return wrap(x.vector);                                               \
+    }                                                                        \
+    template <> inline SEXP wrap(const gsl_vector##SUFFIX##_const_view& x) { \
+        return wrap(x.vector);                                               \
     }
 
     RCPPGSL_VIEW(_int)
@@ -50,14 +49,14 @@ namespace Rcpp{
     RCPPGSL_VIEW(_ulong)
     #undef RCPPGSL_VIEW
 
-    template <> SEXP wrap(const gsl_vector_view& x){       
+    template <> inline SEXP wrap(const gsl_vector_view& x){
         return wrap(x.vector) ;                                       
     }                                                                 
-    template <> SEXP wrap(const gsl_vector_const_view& x ){
+    template <> inline SEXP wrap(const gsl_vector_const_view& x ){
         return wrap(x.vector) ;                                        
     }
 
-    template <typename T> SEXP wrap(const ::RcppGSL::vector_view<T>& x){
+    template <typename T> inline SEXP wrap(const ::RcppGSL::vector_view<T>& x){
         return wrap( x.view.vector ) ;
     }
 
